log
Sat 30 Mar 2024 02:36:42 AM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
a769362
Sat 30 Mar 2024 02:38:51 AM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:40:8: error: variable or field ‘dato’ declared void
   40 |   void dato = list -> current -> data;
      |        ^~~~
list.c:40:15: error: initialization of ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   40 |   void dato = list -> current -> data;
      |               ^~~~
list.c:41:10: error: returning ‘int’ from a function with return type ‘void *’ makes pointer from integer without a cast [-Werror=int-conversion]
   41 |   return dato;
      |          ^~~~
cc1: all warnings being treated as errors
Compilation failed
ffa75c8
Sat 30 Mar 2024 02:39:51 AM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:40:15: error: initialization of ‘List *’ {aka ‘struct List *’} from incompatible pointer type ‘Node *’ [-Werror=incompatible-pointer-types]
   40 |   List* aux = list -> current;
      |               ^~~~
list.c:41:14: error: ‘List’ {aka ‘struct List’} has no member named ‘data’
   41 |   return aux -> data;
      |              ^~
list.c:42:1: error: control reaches end of non-void function [-Werror=return-type]
   42 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
f379a22
Sat 30 Mar 2024 02:41:28 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:40:15: error: initialization of ‘List *’ {aka ‘struct List *’} from incompatible pointer type ‘Node *’ [-Werror=incompatible-pointer-types]
   40 |   List* aux = list -> head;
      |               ^~~~
list.c:41:14: error: ‘List’ {aka ‘struct List’} has no member named ‘data’
   41 |   return aux -> data;
      |              ^~
list.c:42:1: error: control reaches end of non-void function [-Werror=return-type]
   42 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
14c89a3
Sat 30 Mar 2024 02:42:12 AM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:41:7: error: assignment to ‘List *’ {aka ‘struct List *’} from incompatible pointer type ‘Node *’ [-Werror=incompatible-pointer-types]
   41 |   aux = list -> head;
      |       ^
list.c:42:14: error: ‘List’ {aka ‘struct List’} has no member named ‘data’
   42 |   return aux -> data;
      |              ^~
list.c:43:1: error: control reaches end of non-void function [-Werror=return-type]
   43 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
a1b781a
Sat 30 Mar 2024 02:44:47 AM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:41:7: error: assignment to ‘List *’ {aka ‘struct List *’} from incompatible pointer type ‘Node *’ [-Werror=incompatible-pointer-types]
   41 |   aux = list -> head;
      |       ^
list.c:42:18: error: assignment to ‘Node *’ from incompatible pointer type ‘List *’ {aka ‘struct List *’} [-Werror=incompatible-pointer-types]
   42 |   aux -> current = aux;
      |                  ^
list.c:43:14: error: ‘List’ {aka ‘struct List’} has no member named ‘data’
   43 |   return aux -> data;
      |              ^~
list.c:44:1: error: control reaches end of non-void function [-Werror=return-type]
   44 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
b181578
Sat 30 Mar 2024 02:46:46 AM UTC: 
 list.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:40:15: error: initialization of ‘List *’ {aka ‘struct List *’} from incompatible pointer type ‘Node *’ [-Werror=incompatible-pointer-types]
   40 |   List* aux = list -> head;
      |               ^~~~
list.c:41:18: error: assignment to ‘Node *’ from incompatible pointer type ‘List *’ {aka ‘struct List *’} [-Werror=incompatible-pointer-types]
   41 |   aux -> current = aux;
      |                  ^
cc1: all warnings being treated as errors
Compilation failed
411572f
Sat 30 Mar 2024 02:48:46 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:40:15: error: initialization of ‘List *’ {aka ‘struct List *’} from incompatible pointer type ‘Node *’ [-Werror=incompatible-pointer-types]
   40 |   List* aux = list -> head;
      |               ^~~~
list.c:40:9: error: unused variable ‘aux’ [-Werror=unused-variable]
   40 |   List* aux = list -> head;
      |         ^~~
cc1: all warnings being treated as errors
Compilation failed
148ce37
Sat 30 Mar 2024 02:49:07 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:40:9: error: unused variable ‘aux’ [-Werror=unused-variable]
   40 |   Node* aux = list -> head;
      |         ^~~
cc1: all warnings being treated as errors
Compilation failed
1fcdcc2
